[package]
name = "dummy-challenge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dashmap = "6.1.0"
thiserror = "1"
sp-core = "34.0.0"
parity-scale-codec = "3.0.0"
hex = "0.4.3"
